# OptionswClaude

./: .env.example  .gitignore  README.md  config.yaml.example  pyproject.toml
docs/superpowers/plans/: 2026-04-26-phase-1-foundation.md  2026-05-11-phase-2-brain.md
docs/superpowers/specs/: 2026-04-26-options-trading-assistant-design.md
src/trading_assistant/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  secrets.py
src/trading_assistant/adapters/: __init__.py  alpaca.py  fred.py  yahoo.py
src/trading_assistant/brain/: anthropic_client.py  holding_analyst.py  synthesizer.py  validator.py
src/trading_assistant/brain/guards/: caps.py  dte.py  event_window.py  liquidity.py  payoff_math.py  pin_risk.py  risk_reward.py  spread.py  stale_quote.py
src/trading_assistant/calendars/: __init__.py  events.py  market.py
src/trading_assistant/db/: connection.py  repositories.py  schema.py
src/trading_assistant/ingest/: __init__.py  bars.py  economic.py  market_data.py  news.py  options_chain.py
src/trading_assistant/intents/: model.py  repo.py
src/trading_assistant/signals/: event_proximity.py  model.py  news.py  protocol.py  repo.py  technical.py  volatility.py
tests/: conftest.py  test_adapters_yahoo.py  test_brain_anthropic_client.py  test_brain_holding_analyst.py  test_brain_synthesizer.py  test_brain_validator.py  test_calendars_events.py  test_calendars_market.py  test_cli_check_holding.py  test_cli_snapshot.py  test_cli_synthesize.py  test_config.py  test_db_connection.py  test_db_repositories.py  test_db_schema.py  test_guards_caps.py  test_guards_dte.py  test_guards_event_window.py  test_guards_liquidity.py  test_guards_payoff_math.py  test_guards_pin_risk.py  test_guards_risk_reward.py  test_guards_spread.py  test_guards_stale_quote.py  test_ingest_bars.py  test_ingest_economic.py  test_ingest_market_data.py  test_ingest_news.py  test_ingest_options_chain.py  test_intents_model.py  test_intents_repo.py  test_logging_setup.py  test_secrets.py  test_signals_event_proximity.py  test_signals_model.py  test_signals_news.py  test_signals_repo.py  test_signals_technical.py  test_signals_volatility.py
