[project]
name = "trading-assistant"
version = "0.1.0"
description = "Local options trading assistant for SPY/QQQ/IWM/DIA"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pandas-market-calendars>=4.4",
    "alpaca-py>=0.30",
    "yfinance>=0.2.40",
    "fredapi>=0.5",
    "feedparser>=6.0",
    "httpx>=0.27",
]

[project.scripts]
trading-assistant = "trading_assistant.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_assistant"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "freezegun>=1.5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
